// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scoring-engine golden master > all sources null · graceful degradation > business 1`] = `
{
  "area_type": "suburban",
  "confidence": 0.2,
  "dimensions": [
    {
      "confidence": 0.2,
      "confidence_reason": "No police.uk data returned for these coordinates",
      "label": "Crime",
      "reasoning": "Crime data unavailable for this location",
      "score": 50,
      "weight": 5,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "No deprivation data resolved for the LSOA",
      "label": "Deprivation",
      "reasoning": "Spending power data unavailable",
      "score": 50,
      "weight": 15,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "Neither HM Land Registry nor deprivation data available",
      "label": "Property",
      "reasoning": "Commercial cost data unavailable",
      "score": 50,
      "weight": 15,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "No OpenStreetMap or Ofsted data available for this location",
      "label": "Schools",
      "reasoning": "Education data unavailable",
      "score": 50,
      "weight": 5,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "No OpenStreetMap data returned for these coordinates",
      "label": "Amenities",
      "reasoning": "Amenities data unavailable",
      "score": 50,
      "weight": 25,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "No OpenStreetMap data returned for these coordinates",
      "label": "Transport",
      "reasoning": "Transport data unavailable",
      "score": 50,
      "weight": 20,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "Neither flood nor amenity data available",
      "label": "Environment",
      "reasoning": "Flood data unavailable. 0 parks/green spaces nearby",
      "score": 40,
      "weight": 15,
    },
  ],
  "overall": 49,
}
`;

exports[`scoring-engine golden master > all sources null · graceful degradation > investing 1`] = `
{
  "area_type": "suburban",
  "confidence": 0.2,
  "dimensions": [
    {
      "confidence": 0.2,
      "confidence_reason": "No police.uk data returned for these coordinates",
      "label": "Crime",
      "reasoning": "Crime data unavailable for this location",
      "score": 50,
      "weight": 10,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "No deprivation data resolved for the LSOA",
      "label": "Deprivation",
      "reasoning": "Deprivation data unavailable (non-England or data gap)",
      "score": 50,
      "weight": 10,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "Averaged confidence across price growth and rental yield: No property data and no deprivation data available No property and no deprivation data available",
      "label": "Property",
      "reasoning": "Investment property composite: Insufficient data for price growth assessment Rental yield: Insufficient data for yield assessment",
      "score": 50,
      "weight": 30,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "No OpenStreetMap or Ofsted data available for this location",
      "label": "Schools",
      "reasoning": "Education data unavailable",
      "score": 50,
      "weight": 5,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "No OpenStreetMap data returned for these coordinates",
      "label": "Amenities",
      "reasoning": "Amenities data unavailable",
      "score": 50,
      "weight": 15,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "No OpenStreetMap data returned for these coordinates",
      "label": "Transport",
      "reasoning": "Transport data unavailable",
      "score": 50,
      "weight": 15,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "Neither flood nor amenity data available",
      "label": "Environment",
      "reasoning": "Flood data unavailable. 0 parks/green spaces nearby",
      "score": 40,
      "weight": 15,
    },
  ],
  "overall": 49,
}
`;

exports[`scoring-engine golden master > all sources null · graceful degradation > moving 1`] = `
{
  "area_type": "suburban",
  "confidence": 0.2,
  "dimensions": [
    {
      "confidence": 0.2,
      "confidence_reason": "No police.uk data returned for these coordinates",
      "label": "Crime",
      "reasoning": "Crime data unavailable for this location",
      "score": 50,
      "weight": 20,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "No deprivation data resolved for the LSOA",
      "label": "Deprivation",
      "reasoning": "Deprivation data unavailable (non-England or data gap)",
      "score": 50,
      "weight": 10,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "Neither HM Land Registry nor deprivation data available",
      "label": "Property",
      "reasoning": "Cost data unavailable",
      "score": 50,
      "weight": 20,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "No OpenStreetMap or Ofsted data available for this location",
      "label": "Schools",
      "reasoning": "Education data unavailable",
      "score": 50,
      "weight": 20,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "No OpenStreetMap data returned for these coordinates",
      "label": "Amenities",
      "reasoning": "Amenities data unavailable",
      "score": 50,
      "weight": 10,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "No OpenStreetMap data returned for these coordinates",
      "label": "Transport",
      "reasoning": "Transport data unavailable",
      "score": 50,
      "weight": 15,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "Neither flood nor amenity data available",
      "label": "Environment",
      "reasoning": "Flood data unavailable. 0 parks/green spaces nearby",
      "score": 40,
      "weight": 5,
    },
  ],
  "overall": 50,
}
`;

exports[`scoring-engine golden master > all sources null · graceful degradation > research 1`] = `
{
  "area_type": "suburban",
  "confidence": 0.2,
  "dimensions": [
    {
      "confidence": 0.2,
      "confidence_reason": "No police.uk data returned for these coordinates",
      "label": "Crime",
      "reasoning": "Crime data unavailable for this location",
      "score": 50,
      "weight": 15,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "No deprivation data resolved for the LSOA",
      "label": "Deprivation",
      "reasoning": "Deprivation data unavailable (non-England or data gap)",
      "score": 50,
      "weight": 15,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "Neither HM Land Registry nor deprivation data available",
      "label": "Property",
      "reasoning": "Cost data unavailable",
      "score": 50,
      "weight": 14,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "No OpenStreetMap or Ofsted data available for this location",
      "label": "Schools",
      "reasoning": "Education data unavailable",
      "score": 50,
      "weight": 14,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "No OpenStreetMap data returned for these coordinates",
      "label": "Amenities",
      "reasoning": "Amenities data unavailable",
      "score": 50,
      "weight": 14,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "No OpenStreetMap data returned for these coordinates",
      "label": "Transport",
      "reasoning": "Transport data unavailable",
      "score": 50,
      "weight": 14,
    },
    {
      "confidence": 0.2,
      "confidence_reason": "Neither flood nor amenity data available",
      "label": "Environment",
      "reasoning": "Flood data unavailable. 0 parks/green spaces nearby",
      "score": 40,
      "weight": 14,
    },
  ],
  "overall": 49,
}
`;

exports[`scoring-engine golden master > area-type benchmarks · full data > business · rural 1`] = `
{
  "area_type": "rural",
  "confidence": 0.94,
  "dimensions": [
    {
      "confidence": 0.7,
      "confidence_reason": "300 crimes across 3 months: moderate sample.",
      "label": "Crime",
      "reasoning": "300 crimes over 3 months (100/month). most common: shoplifting (70%). violent crime: 20% of total. trend: rising",
      "score": 38,
      "weight": 5,
    },
    {
      "confidence": 1,
      "confidence_reason": "IMD 2025 income decile used as direct spending-power proxy",
      "label": "Deprivation",
      "reasoning": "IMD 2025 decile 5/10 indicates moderate spending power. Less deprived than 50% of England",
      "score": 53,
      "weight": 15,
    },
    {
      "confidence": 0.7,
      "confidence_reason": "Inferred from residential property values. Not actual commercial rent data — proxy signal. Robust sample (150 HM Land Registry transactions) with stable prices (±3.5% YoY)",
      "label": "Property",
      "reasoning": "Property values £350,000 median (SW1). moderate commercial costs",
      "score": 42,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 Ofsted-rated schools within radius (quality-weighted)",
      "label": "Schools",
      "reasoning": "3 Ofsted-rated schools within 1.5km (1 Outstanding, 1 Good, 1 Requires Improvement). 7 additional educational facilities nearby",
      "score": 89,
      "weight": 5,
    },
    {
      "confidence": 1,
      "confidence_reason": "63 amenities provide a rich, multi-category signal",
      "label": "Amenities",
      "reasoning": "63 amenities nearby: 10 schools, 20 food/drink, 4 healthcare, 8 shops, 6 parks/leisure",
      "score": 95,
      "weight": 25,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 stations and 12 bus stops with named OSM entries",
      "label": "Transport",
      "reasoning": "3 rail/tube stations within 2km. 12 bus stops within 500m. nearby: Test Station, Central Station",
      "score": 95,
      "weight": 20,
    },
    {
      "confidence": 1,
      "confidence_reason": "Environment Agency flood + OpenStreetMap green-space data both available",
      "label": "Environment",
      "reasoning": "2 flood risk zones within 3km. near: River Test. no active warnings. 6 parks/green spaces nearby",
      "score": 93,
      "weight": 15,
    },
  ],
  "overall": 77,
}
`;

exports[`scoring-engine golden master > area-type benchmarks · full data > business · urban 1`] = `
{
  "area_type": "urban",
  "confidence": 0.94,
  "dimensions": [
    {
      "confidence": 0.7,
      "confidence_reason": "300 crimes across 3 months: moderate sample.",
      "label": "Crime",
      "reasoning": "300 crimes over 3 months (100/month). most common: shoplifting (70%). violent crime: 20% of total. trend: rising",
      "score": 38,
      "weight": 5,
    },
    {
      "confidence": 1,
      "confidence_reason": "IMD 2025 income decile used as direct spending-power proxy",
      "label": "Deprivation",
      "reasoning": "IMD 2025 decile 5/10 indicates moderate spending power. Less deprived than 50% of England",
      "score": 53,
      "weight": 15,
    },
    {
      "confidence": 0.7,
      "confidence_reason": "Inferred from residential property values. Not actual commercial rent data — proxy signal. Robust sample (150 HM Land Registry transactions) with stable prices (±3.5% YoY)",
      "label": "Property",
      "reasoning": "Property values £350,000 median (SW1). moderate commercial costs",
      "score": 42,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 Ofsted-rated schools within radius (quality-weighted)",
      "label": "Schools",
      "reasoning": "3 Ofsted-rated schools within 1.5km (1 Outstanding, 1 Good, 1 Requires Improvement). 7 additional educational facilities nearby",
      "score": 54,
      "weight": 5,
    },
    {
      "confidence": 1,
      "confidence_reason": "63 amenities provide a rich, multi-category signal",
      "label": "Amenities",
      "reasoning": "63 amenities nearby: 10 schools, 20 food/drink, 4 healthcare, 8 shops, 6 parks/leisure",
      "score": 89,
      "weight": 25,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 stations and 12 bus stops with named OSM entries",
      "label": "Transport",
      "reasoning": "3 rail/tube stations within 2km. 12 bus stops within 500m. nearby: Test Station, Central Station",
      "score": 80,
      "weight": 20,
    },
    {
      "confidence": 1,
      "confidence_reason": "Environment Agency flood + OpenStreetMap green-space data both available",
      "label": "Environment",
      "reasoning": "2 flood risk zones within 3km. near: River Test. no active warnings. 6 parks/green spaces nearby",
      "score": 93,
      "weight": 15,
    },
  ],
  "overall": 71,
}
`;

exports[`scoring-engine golden master > area-type benchmarks · full data > investing · rural 1`] = `
{
  "area_type": "rural",
  "confidence": 0.93,
  "dimensions": [
    {
      "confidence": 0.7,
      "confidence_reason": "300 crimes across 3 months: moderate sample.",
      "label": "Crime",
      "reasoning": "300 crimes over 3 months (100/month). most common: shoplifting (70%). violent crime: 20% of total. trend: rising",
      "score": 38,
      "weight": 10,
    },
    {
      "confidence": 1,
      "confidence_reason": "Based on IMD 2025 — current English release",
      "label": "Deprivation",
      "reasoning": "IMD 2025 decile 5/10 (moderate deprivation). Ranked 16,878 of 33,755 LSOAs (50th percentile). LSOA: Test LSOA",
      "score": 50,
      "weight": 10,
    },
    {
      "confidence": 0.85,
      "confidence_reason": "Averaged confidence across price growth and rental yield: Real YoY price change from HM Land Registry. Robust sample (150 HM Land Registry transactions) with stable prices (±3.5% YoY) Yield inferred from purchase price and amenity demand — not actual rent observations, directional only. Robust sample (150 HM Land Registry transactions) with stable prices (±3.5% YoY)",
      "label": "Property",
      "reasoning": "Investment property composite: Prices up 3.5% YoY (£338,000 to £350,000). stable with modest growth. 3 transport links Rental yield: Median price £350,000 (123% of national median). moderate prices, balanced yield potential. 63 amenities support demand",
      "score": 68,
      "weight": 30,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 Ofsted-rated schools within radius (quality-weighted)",
      "label": "Schools",
      "reasoning": "3 Ofsted-rated schools within 1.5km (1 Outstanding, 1 Good, 1 Requires Improvement). 7 additional educational facilities nearby",
      "score": 89,
      "weight": 5,
    },
    {
      "confidence": 1,
      "confidence_reason": "63 amenities provide a rich, multi-category signal",
      "label": "Amenities",
      "reasoning": "63 amenities nearby: 10 schools, 20 food/drink, 4 healthcare, 8 shops, 6 parks/leisure",
      "score": 95,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 stations and 12 bus stops with named OSM entries",
      "label": "Transport",
      "reasoning": "3 rail/tube stations within 2km. 12 bus stops within 500m. nearby: Test Station, Central Station",
      "score": 95,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "Environment Agency flood + OpenStreetMap green-space data both available",
      "label": "Environment",
      "reasoning": "2 flood risk zones within 3km. near: River Test. no active warnings. 6 parks/green spaces nearby",
      "score": 93,
      "weight": 15,
    },
  ],
  "overall": 76,
}
`;

exports[`scoring-engine golden master > area-type benchmarks · full data > investing · urban 1`] = `
{
  "area_type": "urban",
  "confidence": 0.93,
  "dimensions": [
    {
      "confidence": 0.7,
      "confidence_reason": "300 crimes across 3 months: moderate sample.",
      "label": "Crime",
      "reasoning": "300 crimes over 3 months (100/month). most common: shoplifting (70%). violent crime: 20% of total. trend: rising",
      "score": 38,
      "weight": 10,
    },
    {
      "confidence": 1,
      "confidence_reason": "Based on IMD 2025 — current English release",
      "label": "Deprivation",
      "reasoning": "IMD 2025 decile 5/10 (moderate deprivation). Ranked 16,878 of 33,755 LSOAs (50th percentile). LSOA: Test LSOA",
      "score": 50,
      "weight": 10,
    },
    {
      "confidence": 0.85,
      "confidence_reason": "Averaged confidence across price growth and rental yield: Real YoY price change from HM Land Registry. Robust sample (150 HM Land Registry transactions) with stable prices (±3.5% YoY) Yield inferred from purchase price and amenity demand — not actual rent observations, directional only. Robust sample (150 HM Land Registry transactions) with stable prices (±3.5% YoY)",
      "label": "Property",
      "reasoning": "Investment property composite: Prices up 3.5% YoY (£338,000 to £350,000). stable with modest growth. 3 transport links Rental yield: Median price £350,000 (123% of national median). moderate prices, balanced yield potential. 63 amenities support demand",
      "score": 68,
      "weight": 30,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 Ofsted-rated schools within radius (quality-weighted)",
      "label": "Schools",
      "reasoning": "3 Ofsted-rated schools within 1.5km (1 Outstanding, 1 Good, 1 Requires Improvement). 7 additional educational facilities nearby",
      "score": 54,
      "weight": 5,
    },
    {
      "confidence": 1,
      "confidence_reason": "63 amenities provide a rich, multi-category signal",
      "label": "Amenities",
      "reasoning": "63 amenities nearby: 10 schools, 20 food/drink, 4 healthcare, 8 shops, 6 parks/leisure",
      "score": 89,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 stations and 12 bus stops with named OSM entries",
      "label": "Transport",
      "reasoning": "3 rail/tube stations within 2km. 12 bus stops within 500m. nearby: Test Station, Central Station",
      "score": 80,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "Environment Agency flood + OpenStreetMap green-space data both available",
      "label": "Environment",
      "reasoning": "2 flood risk zones within 3km. near: River Test. no active warnings. 6 parks/green spaces nearby",
      "score": 93,
      "weight": 15,
    },
  ],
  "overall": 71,
}
`;

exports[`scoring-engine golden master > area-type benchmarks · full data > moving · rural 1`] = `
{
  "area_type": "rural",
  "confidence": 0.94,
  "dimensions": [
    {
      "confidence": 0.7,
      "confidence_reason": "300 crimes across 3 months: moderate sample.",
      "label": "Crime",
      "reasoning": "300 crimes over 3 months (100/month). most common: shoplifting (70%). violent crime: 20% of total. trend: rising",
      "score": 38,
      "weight": 20,
    },
    {
      "confidence": 1,
      "confidence_reason": "Based on IMD 2025 — current English release",
      "label": "Deprivation",
      "reasoning": "IMD 2025 decile 5/10 (moderate deprivation). Ranked 16,878 of 33,755 LSOAs (50th percentile). LSOA: Test LSOA",
      "score": 50,
      "weight": 10,
    },
    {
      "confidence": 1,
      "confidence_reason": "Robust sample (150 HM Land Registry transactions) with stable prices (±3.5% YoY), SW1 outcode",
      "label": "Property",
      "reasoning": "Median sold price £350,000 (SW1 district, 150 transactions). around national average",
      "score": 46,
      "weight": 20,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 Ofsted-rated schools within radius (quality-weighted)",
      "label": "Schools",
      "reasoning": "3 Ofsted-rated schools within 1.5km (1 Outstanding, 1 Good, 1 Requires Improvement). 7 additional educational facilities nearby",
      "score": 89,
      "weight": 20,
    },
    {
      "confidence": 1,
      "confidence_reason": "63 amenities provide a rich, multi-category signal",
      "label": "Amenities",
      "reasoning": "63 amenities nearby: 10 schools, 20 food/drink, 4 healthcare, 8 shops, 6 parks/leisure",
      "score": 95,
      "weight": 10,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 stations and 12 bus stops with named OSM entries",
      "label": "Transport",
      "reasoning": "3 rail/tube stations within 2km. 12 bus stops within 500m. nearby: Test Station, Central Station",
      "score": 95,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "Environment Agency flood + OpenStreetMap green-space data both available",
      "label": "Environment",
      "reasoning": "2 flood risk zones within 3km. near: River Test. no active warnings. 6 parks/green spaces nearby",
      "score": 93,
      "weight": 5,
    },
  ],
  "overall": 68,
}
`;

exports[`scoring-engine golden master > area-type benchmarks · full data > moving · urban 1`] = `
{
  "area_type": "urban",
  "confidence": 0.94,
  "dimensions": [
    {
      "confidence": 0.7,
      "confidence_reason": "300 crimes across 3 months: moderate sample.",
      "label": "Crime",
      "reasoning": "300 crimes over 3 months (100/month). most common: shoplifting (70%). violent crime: 20% of total. trend: rising",
      "score": 38,
      "weight": 20,
    },
    {
      "confidence": 1,
      "confidence_reason": "Based on IMD 2025 — current English release",
      "label": "Deprivation",
      "reasoning": "IMD 2025 decile 5/10 (moderate deprivation). Ranked 16,878 of 33,755 LSOAs (50th percentile). LSOA: Test LSOA",
      "score": 50,
      "weight": 10,
    },
    {
      "confidence": 1,
      "confidence_reason": "Robust sample (150 HM Land Registry transactions) with stable prices (±3.5% YoY), SW1 outcode",
      "label": "Property",
      "reasoning": "Median sold price £350,000 (SW1 district, 150 transactions). around national average",
      "score": 46,
      "weight": 20,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 Ofsted-rated schools within radius (quality-weighted)",
      "label": "Schools",
      "reasoning": "3 Ofsted-rated schools within 1.5km (1 Outstanding, 1 Good, 1 Requires Improvement). 7 additional educational facilities nearby",
      "score": 54,
      "weight": 20,
    },
    {
      "confidence": 1,
      "confidence_reason": "63 amenities provide a rich, multi-category signal",
      "label": "Amenities",
      "reasoning": "63 amenities nearby: 10 schools, 20 food/drink, 4 healthcare, 8 shops, 6 parks/leisure",
      "score": 89,
      "weight": 10,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 stations and 12 bus stops with named OSM entries",
      "label": "Transport",
      "reasoning": "3 rail/tube stations within 2km. 12 bus stops within 500m. nearby: Test Station, Central Station",
      "score": 80,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "Environment Agency flood + OpenStreetMap green-space data both available",
      "label": "Environment",
      "reasoning": "2 flood risk zones within 3km. near: River Test. no active warnings. 6 parks/green spaces nearby",
      "score": 93,
      "weight": 5,
    },
  ],
  "overall": 58,
}
`;

exports[`scoring-engine golden master > area-type benchmarks · full data > research · rural 1`] = `
{
  "area_type": "rural",
  "confidence": 0.96,
  "dimensions": [
    {
      "confidence": 0.7,
      "confidence_reason": "300 crimes across 3 months: moderate sample.",
      "label": "Crime",
      "reasoning": "300 crimes over 3 months (100/month). most common: shoplifting (70%). violent crime: 20% of total. trend: rising",
      "score": 38,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "Based on IMD 2025 — current English release",
      "label": "Deprivation",
      "reasoning": "IMD 2025 decile 5/10 (moderate deprivation). Ranked 16,878 of 33,755 LSOAs (50th percentile). LSOA: Test LSOA",
      "score": 50,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "Robust sample (150 HM Land Registry transactions) with stable prices (±3.5% YoY), SW1 outcode",
      "label": "Property",
      "reasoning": "Median sold price £350,000 (SW1 district, 150 transactions). around national average",
      "score": 46,
      "weight": 14,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 Ofsted-rated schools within radius (quality-weighted)",
      "label": "Schools",
      "reasoning": "3 Ofsted-rated schools within 1.5km (1 Outstanding, 1 Good, 1 Requires Improvement). 7 additional educational facilities nearby",
      "score": 89,
      "weight": 14,
    },
    {
      "confidence": 1,
      "confidence_reason": "63 amenities provide a rich, multi-category signal",
      "label": "Amenities",
      "reasoning": "63 amenities nearby: 10 schools, 20 food/drink, 4 healthcare, 8 shops, 6 parks/leisure",
      "score": 95,
      "weight": 14,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 stations and 12 bus stops with named OSM entries",
      "label": "Transport",
      "reasoning": "3 rail/tube stations within 2km. 12 bus stops within 500m. nearby: Test Station, Central Station",
      "score": 95,
      "weight": 14,
    },
    {
      "confidence": 1,
      "confidence_reason": "Environment Agency flood + OpenStreetMap green-space data both available",
      "label": "Environment",
      "reasoning": "2 flood risk zones within 3km. near: River Test. no active warnings. 6 parks/green spaces nearby",
      "score": 93,
      "weight": 14,
    },
  ],
  "overall": 72,
}
`;

exports[`scoring-engine golden master > area-type benchmarks · full data > research · urban 1`] = `
{
  "area_type": "urban",
  "confidence": 0.96,
  "dimensions": [
    {
      "confidence": 0.7,
      "confidence_reason": "300 crimes across 3 months: moderate sample.",
      "label": "Crime",
      "reasoning": "300 crimes over 3 months (100/month). most common: shoplifting (70%). violent crime: 20% of total. trend: rising",
      "score": 38,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "Based on IMD 2025 — current English release",
      "label": "Deprivation",
      "reasoning": "IMD 2025 decile 5/10 (moderate deprivation). Ranked 16,878 of 33,755 LSOAs (50th percentile). LSOA: Test LSOA",
      "score": 50,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "Robust sample (150 HM Land Registry transactions) with stable prices (±3.5% YoY), SW1 outcode",
      "label": "Property",
      "reasoning": "Median sold price £350,000 (SW1 district, 150 transactions). around national average",
      "score": 46,
      "weight": 14,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 Ofsted-rated schools within radius (quality-weighted)",
      "label": "Schools",
      "reasoning": "3 Ofsted-rated schools within 1.5km (1 Outstanding, 1 Good, 1 Requires Improvement). 7 additional educational facilities nearby",
      "score": 54,
      "weight": 14,
    },
    {
      "confidence": 1,
      "confidence_reason": "63 amenities provide a rich, multi-category signal",
      "label": "Amenities",
      "reasoning": "63 amenities nearby: 10 schools, 20 food/drink, 4 healthcare, 8 shops, 6 parks/leisure",
      "score": 89,
      "weight": 14,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 stations and 12 bus stops with named OSM entries",
      "label": "Transport",
      "reasoning": "3 rail/tube stations within 2km. 12 bus stops within 500m. nearby: Test Station, Central Station",
      "score": 80,
      "weight": 14,
    },
    {
      "confidence": 1,
      "confidence_reason": "Environment Agency flood + OpenStreetMap green-space data both available",
      "label": "Environment",
      "reasoning": "2 flood risk zones within 3km. near: River Test. no active warnings. 6 parks/green spaces nearby",
      "score": 93,
      "weight": 14,
    },
  ],
  "overall": 64,
}
`;

exports[`scoring-engine golden master > core data only · default area type > business 1`] = `
{
  "area_type": "suburban",
  "confidence": 0.88,
  "dimensions": [
    {
      "confidence": 0.7,
      "confidence_reason": "300 crimes across 3 months: moderate sample.",
      "label": "Crime",
      "reasoning": "300 crimes over 3 months (100/month). most common: shoplifting (70%). violent crime: 20% of total. trend: rising",
      "score": 38,
      "weight": 5,
    },
    {
      "confidence": 1,
      "confidence_reason": "IMD 2025 income decile used as direct spending-power proxy",
      "label": "Deprivation",
      "reasoning": "IMD 2025 decile 5/10 indicates moderate spending power. Less deprived than 50% of England",
      "score": 53,
      "weight": 15,
    },
    {
      "confidence": 0.4,
      "confidence_reason": "No property data available — deprivation index used as second-order proxy. Treat as directional",
      "label": "Property",
      "reasoning": "IMD 2025 decile 5/10: moderate commercial costs. Commercial rents correlate with area affluence",
      "score": 59,
      "weight": 15,
    },
    {
      "confidence": 0.7,
      "confidence_reason": "Count-based score from OpenStreetMap — no Ofsted quality data available (Wales, Scotland, or unseeded). Estyn/Education Scotland integration on roadmap",
      "label": "Schools",
      "reasoning": "10 schools and educational facilities within 1.5km",
      "score": 95,
      "weight": 5,
    },
    {
      "confidence": 1,
      "confidence_reason": "63 amenities provide a rich, multi-category signal",
      "label": "Amenities",
      "reasoning": "63 amenities nearby: 10 schools, 20 food/drink, 4 healthcare, 8 shops, 6 parks/leisure",
      "score": 95,
      "weight": 25,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 stations and 12 bus stops with named OSM entries",
      "label": "Transport",
      "reasoning": "3 rail/tube stations within 2km. 12 bus stops within 500m. nearby: Test Station, Central Station",
      "score": 95,
      "weight": 20,
    },
    {
      "confidence": 1,
      "confidence_reason": "Environment Agency flood + OpenStreetMap green-space data both available",
      "label": "Environment",
      "reasoning": "2 flood risk zones within 3km. near: River Test. no active warnings. 6 parks/green spaces nearby",
      "score": 93,
      "weight": 15,
    },
  ],
  "overall": 80,
}
`;

exports[`scoring-engine golden master > core data only · default area type > investing 1`] = `
{
  "area_type": "suburban",
  "confidence": 0.78,
  "dimensions": [
    {
      "confidence": 0.7,
      "confidence_reason": "300 crimes across 3 months: moderate sample.",
      "label": "Crime",
      "reasoning": "300 crimes over 3 months (100/month). most common: shoplifting (70%). violent crime: 20% of total. trend: rising",
      "score": 38,
      "weight": 10,
    },
    {
      "confidence": 1,
      "confidence_reason": "Based on IMD 2025 — current English release",
      "label": "Deprivation",
      "reasoning": "IMD 2025 decile 5/10 (moderate deprivation). Ranked 16,878 of 33,755 LSOAs (50th percentile). LSOA: Test LSOA",
      "score": 50,
      "weight": 10,
    },
    {
      "confidence": 0.4,
      "confidence_reason": "Averaged confidence across price growth and rental yield: No HM Land Registry YoY data — deprivation decile used as growth proxy. Treat as directional only No HM Land Registry data — deprivation decile used as yield proxy. Treat as indicative only",
      "label": "Property",
      "reasoning": "Investment property composite: IMD 2025 decile 5/10: mid-range area with strong growth potential. 3 transport links support appreciation Rental yield: IMD 2025 decile 5/10: moderate property values, balanced yield potential. 63 nearby amenities support tenant demand",
      "score": 81,
      "weight": 30,
    },
    {
      "confidence": 0.7,
      "confidence_reason": "Count-based score from OpenStreetMap — no Ofsted quality data available (Wales, Scotland, or unseeded). Estyn/Education Scotland integration on roadmap",
      "label": "Schools",
      "reasoning": "10 schools and educational facilities within 1.5km",
      "score": 95,
      "weight": 5,
    },
    {
      "confidence": 1,
      "confidence_reason": "63 amenities provide a rich, multi-category signal",
      "label": "Amenities",
      "reasoning": "63 amenities nearby: 10 schools, 20 food/drink, 4 healthcare, 8 shops, 6 parks/leisure",
      "score": 95,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 stations and 12 bus stops with named OSM entries",
      "label": "Transport",
      "reasoning": "3 rail/tube stations within 2km. 12 bus stops within 500m. nearby: Test Station, Central Station",
      "score": 95,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "Environment Agency flood + OpenStreetMap green-space data both available",
      "label": "Environment",
      "reasoning": "2 flood risk zones within 3km. near: River Test. no active warnings. 6 parks/green spaces nearby",
      "score": 93,
      "weight": 15,
    },
  ],
  "overall": 80,
}
`;

exports[`scoring-engine golden master > core data only · default area type > moving 1`] = `
{
  "area_type": "suburban",
  "confidence": 0.76,
  "dimensions": [
    {
      "confidence": 0.7,
      "confidence_reason": "300 crimes across 3 months: moderate sample.",
      "label": "Crime",
      "reasoning": "300 crimes over 3 months (100/month). most common: shoplifting (70%). violent crime: 20% of total. trend: rising",
      "score": 38,
      "weight": 20,
    },
    {
      "confidence": 1,
      "confidence_reason": "Based on IMD 2025 — current English release",
      "label": "Deprivation",
      "reasoning": "IMD 2025 decile 5/10 (moderate deprivation). Ranked 16,878 of 33,755 LSOAs (50th percentile). LSOA: Test LSOA",
      "score": 50,
      "weight": 10,
    },
    {
      "confidence": 0.4,
      "confidence_reason": "No HM Land Registry data available — deprivation index used as cost proxy. Treat as indicative, not a price signal",
      "label": "Property",
      "reasoning": "IMD 2025 decile 5/10 as cost proxy: moderate cost of living",
      "score": 58,
      "weight": 20,
    },
    {
      "confidence": 0.7,
      "confidence_reason": "Count-based score from OpenStreetMap — no Ofsted quality data available (Wales, Scotland, or unseeded). Estyn/Education Scotland integration on roadmap",
      "label": "Schools",
      "reasoning": "10 schools and educational facilities within 1.5km",
      "score": 95,
      "weight": 20,
    },
    {
      "confidence": 1,
      "confidence_reason": "63 amenities provide a rich, multi-category signal",
      "label": "Amenities",
      "reasoning": "63 amenities nearby: 10 schools, 20 food/drink, 4 healthcare, 8 shops, 6 parks/leisure",
      "score": 95,
      "weight": 10,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 stations and 12 bus stops with named OSM entries",
      "label": "Transport",
      "reasoning": "3 rail/tube stations within 2km. 12 bus stops within 500m. nearby: Test Station, Central Station",
      "score": 95,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "Environment Agency flood + OpenStreetMap green-space data both available",
      "label": "Environment",
      "reasoning": "2 flood risk zones within 3km. near: River Test. no active warnings. 6 parks/green spaces nearby",
      "score": 93,
      "weight": 5,
    },
  ],
  "overall": 72,
}
`;

exports[`scoring-engine golden master > core data only · default area type > research 1`] = `
{
  "area_type": "suburban",
  "confidence": 0.83,
  "dimensions": [
    {
      "confidence": 0.7,
      "confidence_reason": "300 crimes across 3 months: moderate sample.",
      "label": "Crime",
      "reasoning": "300 crimes over 3 months (100/month). most common: shoplifting (70%). violent crime: 20% of total. trend: rising",
      "score": 38,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "Based on IMD 2025 — current English release",
      "label": "Deprivation",
      "reasoning": "IMD 2025 decile 5/10 (moderate deprivation). Ranked 16,878 of 33,755 LSOAs (50th percentile). LSOA: Test LSOA",
      "score": 50,
      "weight": 15,
    },
    {
      "confidence": 0.4,
      "confidence_reason": "No HM Land Registry data available — deprivation index used as cost proxy. Treat as indicative, not a price signal",
      "label": "Property",
      "reasoning": "IMD 2025 decile 5/10 as cost proxy: moderate cost of living",
      "score": 58,
      "weight": 14,
    },
    {
      "confidence": 0.7,
      "confidence_reason": "Count-based score from OpenStreetMap — no Ofsted quality data available (Wales, Scotland, or unseeded). Estyn/Education Scotland integration on roadmap",
      "label": "Schools",
      "reasoning": "10 schools and educational facilities within 1.5km",
      "score": 95,
      "weight": 14,
    },
    {
      "confidence": 1,
      "confidence_reason": "63 amenities provide a rich, multi-category signal",
      "label": "Amenities",
      "reasoning": "63 amenities nearby: 10 schools, 20 food/drink, 4 healthcare, 8 shops, 6 parks/leisure",
      "score": 95,
      "weight": 14,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 stations and 12 bus stops with named OSM entries",
      "label": "Transport",
      "reasoning": "3 rail/tube stations within 2km. 12 bus stops within 500m. nearby: Test Station, Central Station",
      "score": 95,
      "weight": 14,
    },
    {
      "confidence": 1,
      "confidence_reason": "Environment Agency flood + OpenStreetMap green-space data both available",
      "label": "Environment",
      "reasoning": "2 flood risk zones within 3km. near: River Test. no active warnings. 6 parks/green spaces nearby",
      "score": 93,
      "weight": 14,
    },
  ],
  "overall": 74,
}
`;

exports[`scoring-engine golden master > full data · suburban · prices + ofsted > business 1`] = `
{
  "area_type": "suburban",
  "confidence": 0.94,
  "dimensions": [
    {
      "confidence": 0.7,
      "confidence_reason": "300 crimes across 3 months: moderate sample.",
      "label": "Crime",
      "reasoning": "300 crimes over 3 months (100/month). most common: shoplifting (70%). violent crime: 20% of total. trend: rising",
      "score": 38,
      "weight": 5,
    },
    {
      "confidence": 1,
      "confidence_reason": "IMD 2025 income decile used as direct spending-power proxy",
      "label": "Deprivation",
      "reasoning": "IMD 2025 decile 5/10 indicates moderate spending power. Less deprived than 50% of England",
      "score": 53,
      "weight": 15,
    },
    {
      "confidence": 0.7,
      "confidence_reason": "Inferred from residential property values. Not actual commercial rent data — proxy signal. Robust sample (150 HM Land Registry transactions) with stable prices (±3.5% YoY)",
      "label": "Property",
      "reasoning": "Property values £350,000 median (SW1). moderate commercial costs",
      "score": 42,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 Ofsted-rated schools within radius (quality-weighted)",
      "label": "Schools",
      "reasoning": "3 Ofsted-rated schools within 1.5km (1 Outstanding, 1 Good, 1 Requires Improvement). 7 additional educational facilities nearby",
      "score": 63,
      "weight": 5,
    },
    {
      "confidence": 1,
      "confidence_reason": "63 amenities provide a rich, multi-category signal",
      "label": "Amenities",
      "reasoning": "63 amenities nearby: 10 schools, 20 food/drink, 4 healthcare, 8 shops, 6 parks/leisure",
      "score": 95,
      "weight": 25,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 stations and 12 bus stops with named OSM entries",
      "label": "Transport",
      "reasoning": "3 rail/tube stations within 2km. 12 bus stops within 500m. nearby: Test Station, Central Station",
      "score": 95,
      "weight": 20,
    },
    {
      "confidence": 1,
      "confidence_reason": "Environment Agency flood + OpenStreetMap green-space data both available",
      "label": "Environment",
      "reasoning": "2 flood risk zones within 3km. near: River Test. no active warnings. 6 parks/green spaces nearby",
      "score": 93,
      "weight": 15,
    },
  ],
  "overall": 76,
}
`;

exports[`scoring-engine golden master > full data · suburban · prices + ofsted > investing 1`] = `
{
  "area_type": "suburban",
  "confidence": 0.93,
  "dimensions": [
    {
      "confidence": 0.7,
      "confidence_reason": "300 crimes across 3 months: moderate sample.",
      "label": "Crime",
      "reasoning": "300 crimes over 3 months (100/month). most common: shoplifting (70%). violent crime: 20% of total. trend: rising",
      "score": 38,
      "weight": 10,
    },
    {
      "confidence": 1,
      "confidence_reason": "Based on IMD 2025 — current English release",
      "label": "Deprivation",
      "reasoning": "IMD 2025 decile 5/10 (moderate deprivation). Ranked 16,878 of 33,755 LSOAs (50th percentile). LSOA: Test LSOA",
      "score": 50,
      "weight": 10,
    },
    {
      "confidence": 0.85,
      "confidence_reason": "Averaged confidence across price growth and rental yield: Real YoY price change from HM Land Registry. Robust sample (150 HM Land Registry transactions) with stable prices (±3.5% YoY) Yield inferred from purchase price and amenity demand — not actual rent observations, directional only. Robust sample (150 HM Land Registry transactions) with stable prices (±3.5% YoY)",
      "label": "Property",
      "reasoning": "Investment property composite: Prices up 3.5% YoY (£338,000 to £350,000). stable with modest growth. 3 transport links Rental yield: Median price £350,000 (123% of national median). moderate prices, balanced yield potential. 63 amenities support demand",
      "score": 68,
      "weight": 30,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 Ofsted-rated schools within radius (quality-weighted)",
      "label": "Schools",
      "reasoning": "3 Ofsted-rated schools within 1.5km (1 Outstanding, 1 Good, 1 Requires Improvement). 7 additional educational facilities nearby",
      "score": 63,
      "weight": 5,
    },
    {
      "confidence": 1,
      "confidence_reason": "63 amenities provide a rich, multi-category signal",
      "label": "Amenities",
      "reasoning": "63 amenities nearby: 10 schools, 20 food/drink, 4 healthcare, 8 shops, 6 parks/leisure",
      "score": 95,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 stations and 12 bus stops with named OSM entries",
      "label": "Transport",
      "reasoning": "3 rail/tube stations within 2km. 12 bus stops within 500m. nearby: Test Station, Central Station",
      "score": 95,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "Environment Agency flood + OpenStreetMap green-space data both available",
      "label": "Environment",
      "reasoning": "2 flood risk zones within 3km. near: River Test. no active warnings. 6 parks/green spaces nearby",
      "score": 93,
      "weight": 15,
    },
  ],
  "overall": 75,
}
`;

exports[`scoring-engine golden master > full data · suburban · prices + ofsted > moving 1`] = `
{
  "area_type": "suburban",
  "confidence": 0.94,
  "dimensions": [
    {
      "confidence": 0.7,
      "confidence_reason": "300 crimes across 3 months: moderate sample.",
      "label": "Crime",
      "reasoning": "300 crimes over 3 months (100/month). most common: shoplifting (70%). violent crime: 20% of total. trend: rising",
      "score": 38,
      "weight": 20,
    },
    {
      "confidence": 1,
      "confidence_reason": "Based on IMD 2025 — current English release",
      "label": "Deprivation",
      "reasoning": "IMD 2025 decile 5/10 (moderate deprivation). Ranked 16,878 of 33,755 LSOAs (50th percentile). LSOA: Test LSOA",
      "score": 50,
      "weight": 10,
    },
    {
      "confidence": 1,
      "confidence_reason": "Robust sample (150 HM Land Registry transactions) with stable prices (±3.5% YoY), SW1 outcode",
      "label": "Property",
      "reasoning": "Median sold price £350,000 (SW1 district, 150 transactions). around national average",
      "score": 46,
      "weight": 20,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 Ofsted-rated schools within radius (quality-weighted)",
      "label": "Schools",
      "reasoning": "3 Ofsted-rated schools within 1.5km (1 Outstanding, 1 Good, 1 Requires Improvement). 7 additional educational facilities nearby",
      "score": 63,
      "weight": 20,
    },
    {
      "confidence": 1,
      "confidence_reason": "63 amenities provide a rich, multi-category signal",
      "label": "Amenities",
      "reasoning": "63 amenities nearby: 10 schools, 20 food/drink, 4 healthcare, 8 shops, 6 parks/leisure",
      "score": 95,
      "weight": 10,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 stations and 12 bus stops with named OSM entries",
      "label": "Transport",
      "reasoning": "3 rail/tube stations within 2km. 12 bus stops within 500m. nearby: Test Station, Central Station",
      "score": 95,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "Environment Agency flood + OpenStreetMap green-space data both available",
      "label": "Environment",
      "reasoning": "2 flood risk zones within 3km. near: River Test. no active warnings. 6 parks/green spaces nearby",
      "score": 93,
      "weight": 5,
    },
  ],
  "overall": 63,
}
`;

exports[`scoring-engine golden master > full data · suburban · prices + ofsted > research 1`] = `
{
  "area_type": "suburban",
  "confidence": 0.96,
  "dimensions": [
    {
      "confidence": 0.7,
      "confidence_reason": "300 crimes across 3 months: moderate sample.",
      "label": "Crime",
      "reasoning": "300 crimes over 3 months (100/month). most common: shoplifting (70%). violent crime: 20% of total. trend: rising",
      "score": 38,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "Based on IMD 2025 — current English release",
      "label": "Deprivation",
      "reasoning": "IMD 2025 decile 5/10 (moderate deprivation). Ranked 16,878 of 33,755 LSOAs (50th percentile). LSOA: Test LSOA",
      "score": 50,
      "weight": 15,
    },
    {
      "confidence": 1,
      "confidence_reason": "Robust sample (150 HM Land Registry transactions) with stable prices (±3.5% YoY), SW1 outcode",
      "label": "Property",
      "reasoning": "Median sold price £350,000 (SW1 district, 150 transactions). around national average",
      "score": 46,
      "weight": 14,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 Ofsted-rated schools within radius (quality-weighted)",
      "label": "Schools",
      "reasoning": "3 Ofsted-rated schools within 1.5km (1 Outstanding, 1 Good, 1 Requires Improvement). 7 additional educational facilities nearby",
      "score": 63,
      "weight": 14,
    },
    {
      "confidence": 1,
      "confidence_reason": "63 amenities provide a rich, multi-category signal",
      "label": "Amenities",
      "reasoning": "63 amenities nearby: 10 schools, 20 food/drink, 4 healthcare, 8 shops, 6 parks/leisure",
      "score": 95,
      "weight": 14,
    },
    {
      "confidence": 1,
      "confidence_reason": "3 stations and 12 bus stops with named OSM entries",
      "label": "Transport",
      "reasoning": "3 rail/tube stations within 2km. 12 bus stops within 500m. nearby: Test Station, Central Station",
      "score": 95,
      "weight": 14,
    },
    {
      "confidence": 1,
      "confidence_reason": "Environment Agency flood + OpenStreetMap green-space data both available",
      "label": "Environment",
      "reasoning": "2 flood risk zones within 3km. near: River Test. no active warnings. 6 parks/green spaces nearby",
      "score": 93,
      "weight": 14,
    },
  ],
  "overall": 68,
}
`;
